Fix idStrip() and add recursive searching
Made it so that filenames can be read off of multiple files.
This will make it so that this (hopefully) won't have to run multiple times.

--- a/renamer.ipynb
+++ b/renamer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "id": "7b1ffc40-07eb-44bf-9d3b-1d44bac0b89d",
    "metadata": {},
    "outputs": [],
@@ -17,25 +17,30 @@
     "with open('filepath.txt', 'r') as f:\n",
     "    filepath = f.read().strip()\n",
     "    \n",
-    "with open('filenames.txt', 'r') as f:\n",
-    "    filenames = f.readlines()"
+    "# Recursively open the files in the folder\n",
+    "filenames = []\n",
+    "for curr, folder, files in os.walk(os.getcwd() + '\\\\filenames'):\n",
+    "    if curr == os.getcwd() + '\\\\filenames':\n",
+    "        for file in files:\n",
+    "            with open(os.path.join(curr, file), 'r') as f:\n",
+    "                filenames.append(f.readlines())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "8817cef3-43c1-474c-ac6e-1b3240089934",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def idStrip(filepath):\n",
+    "def idStrip():\n",
     "    #The files are not in alphabetical order by default.\n",
     "    #This strips away the extra information, leaving the ID\n",
     "    \n",
     "    for curr, folder, files in os.walk(filepath):\n",
     "        for file in files:\n",
     "            if '_' in file:\n",
-    "                os.rename(file, file.split('_')[-2])"
+    "                os.rename(os.path.join(filepath, file), os.path.join(filepath, file.split('_')[-2] + '.pdf'))"
    ]
   }
  ],
